--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "express": "^4.17.1",
+    "highlight.js": "^11.3.1",
+    "quill": "^1.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.17",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
